tests/baselines/reference/YieldExpression16_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.ts(1,9): error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.ts(3,5): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression16_es6.ts (2 errors) ====
    function* foo() {
            ~
!!! error TS1220: Generators are only available when targeting ECMAScript 6 or higher.
      function bar() {
        yield foo;
        ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
      }
    }